--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,5 @@
-Flask==0.10.1
- 
-Flask-SocketIO
- 
-Jinja2==2.7.2
- 
-MarkupSafe==0.18
- 
-Werkzeug==0.9.4
- 
-gevent==1.0
- 
-gevent-socketio==0.3.6
- 
-gevent-websocket==0.9.2
- 
-greenlet==0.4.2
- 
-itsdangerous==0.23
- 
-ujson==1.33
+certifi==2021.10.8
+charset-normalizer==2.0.7
+idna==3.3
+requests==2.26.0
+urllib3==1.26.7
